--- a/Vibrant/v280_missing_data.yml
+++ b/Vibrant/v280_missing_data.yml
@@ -1,1 +1,6 @@
-c
+customer_id: 4799
+model: pg
+template_id: site_event_missing_crfs_template
+metadata:
+  db: v280
+  events: [Screening, Baseline]
