--- a/Vibrant Gastro/v280_missing_data.yml
+++ b/Vibrant Gastro/v280_missing_data.yml
@@ -1,4 +1,6 @@
 model: pg
-template_id: site_events_count_data_missing
-metadata:
-  events: [Screening, Baseline]
+template: site_events_count_data_missing
+report:
+  events: 
+   - Screening
+   - Baseline
