--- a/The amazing demo customer/missing_data.yml
+++ b/The amazing demo customer/missing_data.yml
@@ -3,4 +3,6 @@ template: site_events_count_data_missing
 report:
   events: 
     - Screening
-    - Baseline
+    - 30 Days
+    - 60 Days
+    - Safety
