--- a/Rivka Rot/missing_data.yml
+++ b/Rivka Rot/missing_data.yml
@@ -1,4 +1,6 @@
+
 model: pg
+name: Missing data in Screening and Safety events (count by sites) data/missing
 template: site_events_count_data_missing
 report:
   events: 
