--- a/Flask Developer/AE.yml
+++ b/Flask Developer/AE.yml
@@ -6,3 +6,4 @@ report:
      - ADVERSE_EVENT_YESNO
      - ADVERSE_EVENT_COMPLICATION
      - ADVERSE_EVENT_OUTCOME
+     - ADVERSE_EVENT_PROCEDURE_DEVICE_RELATED
