--- a/Flask Developer/AE.yml
+++ b/Flask Developer/AE.yml
@@ -4,6 +4,7 @@ report:
   crf: Adverse Events
   items:
      - ADVERSE_EVENT_YESNO
+     - ADVERSE_EVENT_START_DATE
      - ADVERSE_EVENT_COMPLICATION
      - ADVERSE_EVENT_OUTCOME
      - ADVERSE_EVENT_PROCEDURE_DEVICE_RELATED
