--- a/Flask Developer/AE.yml
+++ b/Flask Developer/AE.yml
@@ -3,6 +3,7 @@ template: subject_event_variables
 report:
   crf: Adverse Events
   items:
+     - ADVERSE_EVENT_START_DATE
      - ADVERSE_EVENT_YESNO
      - ADVERSE_EVENT_START_DATE
      - ADVERSE_EVENT_COMPLICATION
