subject_crf_item_values Test 2

--- a/Flask Developer/ScreeningVisits.yml
+++ b/Flask Developer/ScreeningVisits.yml
@@ -1,7 +1,6 @@
 model: pg
 template: subject_crf_item_values
 report:
-  crf:
-    - Date of Screening Visit
+  crf: Date of Screening Visit
   items:
     - DATE_OF_SCREENING_VISIT
