--- a/Flask Developer/ScreeningVisits.yml
+++ b/Flask Developer/ScreeningVisits.yml
@@ -1,7 +1,7 @@
 model: pg
 template: subject_crf_item_values
 report:
-  crfs:
+  crf:
     - Date of Screening Visit
   items:
     - DATE_OF_SCREENING_VISIT
