--- a/Rivka Rot/EmptyICFDates.yml
+++ b/Rivka Rot/EmptyICFDates.yml
@@ -1,7 +1,7 @@
 model: pg
 template: subject_events_variable_pairs_with_filters
 report:
-  item:
-    - INFORMED_CONSENT_DATE
-  condition:
-    - ">1970-01-01"
+  items:
+    - INFORMED_CONSENT_DATE:
+      - condition: ">"
+      - threshold: "1970-01-01"
