--- a/Rivka Rot/EmptyICFDates.yml
+++ b/Rivka Rot/EmptyICFDates.yml
@@ -2,6 +2,7 @@ model: pg
 template: subject_events_variable_pairs_with_filters
 report:
   items:
-    - INFORMED_CONSENT_DATE:
+    - 
+      - name: INFORMED_CONSENT_DATE
       - condition: ">"
       - threshold: "1970-01-01"
