--- a/Rivka Rot/EmptyICFDates.yml
+++ b/Rivka Rot/EmptyICFDates.yml
@@ -2,7 +2,6 @@ model: pg
 template: subject_events_variable_pairs_with_filters
 report:
   items:
-    - 
-      - name: INFORMED_CONSENT_DATE
-      - condition: ">"
-      - threshold: "1970-01-01"
+    - name: INFORMED_CONSENT_DATE
+      condition: ">"
+      threshold: '1970-01-01'
