--- a/Rivka Rot/EmptyICFDates.yml
+++ b/Rivka Rot/EmptyICFDates.yml
@@ -5,3 +5,6 @@ report:
     - name: INFORMED_CONSENT_DATE
       condition: ">"
       threshold: '1970-01-01'
+    - name: INFORMED_CONSENT_DATE
+      condition: "<"
+      threshold: '2022-01-01'
