--- a/Rivka Rot/WhenICFUpdated.yml
+++ b/Rivka Rot/WhenICFUpdated.yml
@@ -1,7 +1,6 @@
 model: pg
 template: subject_date_time_variables
 report:
-  crf:
-    - Informed Consent
+  crf: Informed Consent
   items:
     - INFORMED_CONSENT_DATE
