Document examples with filenames in yaml and with working examples in the README

--- a/Flask Developer/AE2.yml
+++ b/Flask Developer/AE2.yml
@@ -1,3 +1,4 @@
+# AE2.yml
 model: pg
 template: subject_event_variables
 report:
@@ -5,6 +6,3 @@ report:
   items:
      - ADVERSE_EVENT_START_DATE
      - ADVERSE_EVENT_YESNO
-     - ADVERSE_EVENT_COMPLICATION
-     - ADVERSE_EVENT_OUTCOME
-     - ADVERSE_EVENT_PROCEDURE_DEVICE_RELATED
