--- a/Flask Developer/qol.yml
+++ b/Flask Developer/qol.yml
@@ -1,8 +1,9 @@
 ---
+# qol.yml  
+template: subject_variables
 model: pg
 report:
   items:
     - QOLENERGY
     - QOLGENSENG
   crf: "QoL"
-template: subject_variables
