--- a/Rivka Rot/EmptyICFDates.yml
+++ b/Rivka Rot/EmptyICFDates.yml
@@ -1,10 +1,15 @@
+# EmptyICFDates.yml
+# v2xx ClinCapture databases
 model: pg
+version: 2.1
 template: subject_events_variable_pairs_with_filters
+name:  ICF Dates
 report:
+  crf: Informed Consent
   items:
     - name: INFORMED_CONSENT_DATE
-      condition: ">"
-      threshold: '1970-01-01'
+      condition: >=
+      threshold: 1970-01-01
     - name: INFORMED_CONSENT_DATE
-      condition: "<"
-      threshold: '2022-01-01'
+      condition: <
+      threshold: 2022-01-01
