--- a/Rivka Rot/EmptyICFDates.yml
+++ b/Rivka Rot/EmptyICFDates.yml
@@ -8,8 +8,8 @@ report:
   crf: Informed Consent
   items:
     - name: INFORMED_CONSENT_DATE
-      condition: >=
-      threshold: 1970-01-01
+      condition: '>='
+      threshold: '1970-01-01'
     - name: INFORMED_CONSENT_DATE
-      condition: <
-      threshold: 2022-01-01
+      condition: '<'
+      threshold: '2022-01-01'
