--- a/Flask Developer/InformedConsent.yml
+++ b/Flask Developer/InformedConsent.yml
@@ -1,5 +1,7 @@
 # InformedConsent.yml
 model: pg
+version: '2.1'
+name: ICF Dates
 template: subject_event_variables
 report:
   crf: Informed Consent
