--- a/Flask Developer/EmptyICFDates.yml
+++ b/Flask Developer/EmptyICFDates.yml
@@ -4,6 +4,7 @@ version: '2.1'
 name: Informed Consent since 1970
 template: subject_events_variable_pairs_with_filters
 report:
+  crf: Informed Consent
   items:
     - name: INFORMED_CONSENT_DATE
       condition: ">="
