--- a/Flask Developer/EmptyICFDates.yml
+++ b/Flask Developer/EmptyICFDates.yml
@@ -1,14 +1,14 @@
 # EmptyICFDates.yml
 model: pg
 version: '2.1'
-name: Informed Consent since 1970
+name: Informed Consent in August
 template: subject_events_variable_pairs_with_filters
 report:
   crf: Informed Consent
   items:
     - name: INFORMED_CONSENT_DATE
       condition: ">="
-      threshold: '1970-01-01'
+      threshold: '2018-08-01'
     - name: INFORMED_CONSENT_DATE
       condition: "<"
-      threshold: '2022-01-01'
+      threshold: '2018-09-01'
