--- a/Rivka Rot/AE.yml
+++ b/Rivka Rot/AE.yml
@@ -1,7 +1,7 @@
-model: pg
+Model: pg
 template: subject_event_variables
 Name: Adverse Events
-version: '2.1'
+Version: '2.1'
 report:
   crf: Adverse Events
   items:
