--- a/Flask Developer/ICFDateIssues.yml
+++ b/Flask Developer/ICFDateIssues.yml
@@ -1,14 +1,14 @@
 # EmptyICFDates.yml
 model: pg
 version: '2.1'
-name: Informed Consent in August
+name: Informed Consent Date issues
 template: subject_events_variable_pairs_with_filters
 report:
   crf: Informed Consent
   items:
     - name: INFORMED_CONSENT_DATE
-      condition: ">="
-      threshold: '2018-08-01'
+      condition: "="
+      threshold: '1970-01-01'
     - name: INFORMED_CONSENT_DATE
-      condition: "<"
-      threshold: '2018-09-01'
+      condition: ">"
+      threshold: '2019-01-01'
