--- a/Flask Developer/ICFDateIssues.yml
+++ b/Flask Developer/ICFDateIssues.yml
@@ -1,14 +1,14 @@
 # EmptyICFDates.yml
 model: pg
 version: '2.1'
-name: Informed Consent Date issues
+name: IC Dates before or after study
 template: subject_events_variable_pairs_with_filters
 report:
   crf: Informed Consent
   items:
     - name: INFORMED_CONSENT_DATE
-      condition: "="
-      threshold: '1970-01-01'
+      condition: "<"
+      threshold: '2018-01-01'
     - name: INFORMED_CONSENT_DATE
       condition: ">"
       threshold: '2019-01-01'
