Test round 6 subject_events_variable_pairs_with_filters

--- a/Flask Developer/ICFDateIssues.yml
+++ b/Flask Developer/ICFDateIssues.yml
@@ -10,5 +10,5 @@ report:
       condition: "<"
       threshold: '2018-01-01'
     - name: INFORMED_CONSENT_DATE
-      condition: ">"
-      threshold: '2019-01-01'
+      condition: "="
+      threshold: ''
