Round 2 - checkbox values -Eligibility Criteria

--- a/Flask Developer/NotEligible.yml
+++ b/Flask Developer/NotEligible.yml
@@ -6,7 +6,7 @@ name: Patients not eligible and SBS > 5
 # 5. Subject signed Informed Consent = 0 (no)
 template: subject_event_variables
 report:
-  crf: Eligibility
+  crf: Eligibility Criteria
   items:
      - ELIGIBILITY_INCLUSION_3
      - ELIGIBILITY_INCLUSION_5
