--- a/Flask Developer/CapsuleCount.yml
+++ b/Flask Developer/CapsuleCount.yml
@@ -4,7 +4,7 @@ version: '2.1'
 name: Capsule Count
 # 3. Subjects with an average of < 3 Spontaneous Bowel Movements (SBM) per week (no)
 # 5. Subject signed Informed Consent = 0 (no)
-template: subject_crf_item_values
+template: subject_variables
 report:
   crf:  Daily Capsule
   items:
