--- a/Rivka Rot/Eligibility.yml
+++ b/Rivka Rot/Eligibility.yml
@@ -6,7 +6,7 @@ template: subject_events_variable_pairs_with_filters
 # 3. Subjects with an average of < 3 Spontaneous Bowel Movements (SBM) per week (no)
 # 5. Subject signed Informed Consent = 0 (no)
 report:
-  crf: Eligibility
+  crf: 'Eligibility'
   items:
     - name: 'ELIGIBILITY_INCLUSION_5'
       condition: '='
