--- a/Sanoculis/Eligibility.yml
+++ b/Sanoculis/Eligibility.yml
@@ -1,7 +1,16 @@
 model: pg
-template: site_events_count_data_missing
-version: "2.1"
+version: '2.1'
+name: Eligibility issues
+template: subject_events_variable_pairs_with_filters
 report:
-  events: 
-    - Screening
-    - Baseline
+  crf: Eligibility
+  items:
+    - name: INCL01_IEORRES
+      condition: "="
+      threshold: '0'
+    - name: INCL02_IEORRES
+      condition: "="
+      threshold: '0'
+    - name: INCL03_IEORRES
+      condition: "="
+      threshold: '0'
