--- a/Sanoculis/Eligibility.yml
+++ b/Sanoculis/Eligibility.yml
@@ -1,7 +1,7 @@
 model: pg
 version: '2.1'
 name: Eligibility issues
-template: subject_events_variable_pairs_with_filters
+template: subject_variables
 report:
   crf: Eligibility
   items:
