--- a/Sanoculis/missing_required_crf.yml
+++ b/Sanoculis/missing_required_crf.yml
@@ -9,4 +9,9 @@ report:
     - 1 Day Post Index Procedure
     - 7 Day Post Index Procedure
     - 14 Day Post Index Procedure
+    - 4 Weeks Post Index Procedure
+    - 12 Weeks Post Index Procedure
+    - 24 Weeks Post Index Procedure
+    - 38 Weeks Post Index Procedure
+    - 52 Weeks Post Index Procedure
     - Termination
