--- a/Rivka Rot/agg.yml
+++ b/Rivka Rot/agg.yml
@@ -6,7 +6,7 @@ template: agg_subject_variable_with_filters
 # Count Subjects with an average of < 3 Spontaneous Bowel Movements (SBM) per week (no)
 report:
   crf: 'Eligibility Criteria'
-  items:
+  item:
     - name: 'ELIGIBILITY_INCLUSION_5'
       condition: '='
       threshold: '0'
