--- a/Rivka Rot/agg.yml
+++ b/Rivka Rot/agg.yml
@@ -1,11 +1,11 @@
-# EmptyICFDates.yml
+# agg.yml
 model: pg
 version: '2.1'
-name: Count Subjects with an average of < 3 Spontaneous Bowel Movements (SBM) per week (no)
+name: Count Subjects with AE
 template: agg_subject_variable_with_filters
-# Count Subjects with an average of < 3 Spontaneous Bowel Movements (SBM) per week (no)
+# Count Subjects with AE
 report:
   item:
-    - name: 'ELIGIBILITY_INCLUSION_5'
+    - name: 'ADVERSE_EVENT_YESNO'
       condition: '='
-      threshold: '0'
+      threshold: '1'
